force-app/main/default/objects/Payment_Voucher__c/Payment_Voucher__c.object-meta.xml
<CustomObject>
    <label>Payment Voucher</label>
    <nameField>
        <displayFormat>PV-{000000}</displayFormat>
        <label>Payment Voucher ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Voucher</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>