force-app/main/default/objects/Payment_Voucher__c/fields/Allocated_Amount__c.field-meta.xml
<CustomField>
    <fullName>Allocated_Amount__c</fullName>
    <label>Allocated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>