force-app/main/default/objects/Payment_Voucher__c/fields/Payment_To__c.field-meta.xml
<CustomField>
    <fullName>Payment_To__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Payment To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payment Voucher</relationshipLabel>
    <relationshipName>Payment_Voucher</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>